--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,16 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+@keyframes infinite-scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-50% - 1rem));
+  }
+}
+
+.animate-infinite-scroll {
+  animation: infinite-scroll 40s linear infinite;
+}
